--- a/answer_top.html
+++ b/answer_top.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-    <!-- TOP -->
+    <!-- 回答者用ページ_TOP -->
     <h1>社内満足度調査</h1>
     <div class="text-center">
-        <a href="index.html" class="to_employee to_employee2">回答者用ページ</a>
-        <a href="result_top.html" target="_blank" class="to_admin to_admin2">管理者用ページ</a>
+        <a href="answer_page.html" class="start_btn start_btn2">スタート</a>
+    </div>
+    <div class="copy_btn_box">
+        <button type="button" id="copy-page"><span id="cAction">URLをコピー</span></button>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
