--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-    <!-- 回答者用ページ_TOP -->
+    <!-- TOP -->
     <h1>社内満足度調査</h1>
     <div class="text-center">
-        <a href="answer_page.html" class="start_btn start_btn2">スタート</a>
+        <a href="answer_top.html" class="to_employee to_employee2">回答者用ページ</a>
+        <a href="result_top.html" target="_blank" class="to_admin to_admin2">管理者用ページ</a>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
